# personal-project

./: CMakeLists.txt  Error.h  File.cpp  File.h  Log.cpp  Log.h  ObjectDestroyer.cpp  ObjectDestroyer.h  common_libraries.h  main.cpp
src/: common_libraries.h  common_project_libraries.h  common_std_libraries.h  main.cpp
src/Managers/: Error.cpp  Error.h  File.cpp  File.h  Log.cpp  Log.h  ObjectDestroyer.cpp  ObjectDestroyer.h
